fix backgound on mobile

--- a/gui/src/app.scss
+++ b/gui/src/app.scss
@@ -9,5 +9,5 @@ html, body, #app {
 }
 
 html {
-  background: radial-gradient(#0f151e 0%, #090a0f 100%);
+  background: #090a0f radial-gradient(#0f151e 0%, #090a0f 100%);
 }
